client/text editor: add a quick way to upload attachments straight from the text editor
